--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craftjs/core": "^0.2.11",
+    "@craftjs/layers": "^0.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
@@ -15,7 +16,9 @@
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-tippy": "^1.4.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
